Update task1,task2,task3 and add README.txt file

--- a/homework/tatev_martirosyan/js/homework_js/task_1.html
+++ b/homework/tatev_martirosyan/js/homework_js/task_1.html
@@ -1,4 +1,3 @@
-<!Doctype html>
 <html>
 	<head>
 		<title>JS homework</title>
@@ -6,9 +5,21 @@
 	</head>
 	<body>
 	<script>
-		let a=[1, 9, 91, 27, 12, 6];
-		let p=a.filter(value => value%3==0).reduce((sum,value) => sum+value), 0);
-		console.log(p);
+		function arraySum (a,n)
+		{
+			let p = a.filter(value => value%n===0).reduce((sum,value) => sum+value, 0);
+			return p;
+		}
+
+		function test(input, exp)
+		{
+			let actual=arraySum(input,3);
+			if(actual===exp)
+				console.log("OK");
+			else
+				console.log("ERROR");
+		}
+		test([1, 9, 91, 27, 12, 83, 29],48);
 	</script>
 	</body>
 </html>
