--- a/homework/nare_mkrtchyan/html/index0505.html
+++ b/homework/nare_mkrtchyan/html/index0505.html
@@ -4,27 +4,48 @@
 		<meta charset="utf-8">
 		<title>Task 05.05</title>
 		<style>
-			.reg{
-				float: right;
-				margin-right: 10%;
-			}
-			.inform{
+			
+			.column {
 				float: left;
-				margin-left: 10%;
+				
 			}
-			.search{
-				float:right;
-			}	
-
+			.left {
+				width: 28%;
+				margin-left: 2%;
+				padding-left: 2%;
+				padding-top: 2%;
+				background-color: #786060;
+			}
+			.middle {
+				width: 28%;
+				background-color: #c49797;
+				padding: 3%;
+			}
+			.right {
+				width: 28%;
+				padding-top: 2%;
+				padding-bottom: 3%;
+				padding-left: 3%;
+				margin-right: 3%;
+				background-color: #786060;
+			}
+			
+		
 		</style>
 	</head>
 	<body>
-		<div class="search">
-			<input type="text" id="search" placeholder="Type color to search">
-			<input type="submit" value="search">
+		<div class="row">
+		<div class="column left">
+		<p id="info">
+			
+		</p>
+		</div>
+		<div class="column middle">
+			<input type="text" id="search" placeholder="Type property to search">
+			<input type="submit" value="search" id ="btn">
 			<p id="s"></p>	
 		</div>
-		<div class="reg">
+		<div class="column right">
                 <form onsubmit="submitHandler(event)">
                         <h2>Add New Cars</h2>
                         <label for="input1">Name</label><br>
@@ -42,12 +63,7 @@
 			<input type="submit" value="Register">
 		</form>
 		</div>
-		<div class="inform">
-		<p id="info">
-			
-		</p>
 		</div>
-		<p id="out"></p>
 		<script src="../JavaScript/task0505.js"></script>
 	</body>
 </html>
