--- a/homework/srbuhi-panchoyan/js/homework4/cars.html
+++ b/homework/srbuhi-panchoyan/js/homework4/cars.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>JS</title>
-	<script type="text/javascript" src="./indexCar.js"></script>
+	<meta charset="UTF-8"></meta>	
+	<script type="text/javascript" src="./index.js"></script>
 	<link rel="stylesheet" type="text/css" href="./cars.css">
 </head>
 <body>
@@ -35,6 +36,36 @@
 				<option value="other">other</option>
 			</select>
 			<input type="submit" value="Submit" id="sabmit" onclick="addCar()">
+		</form>
+		<hr>
+		<h2>Search car</h2>
+		<form>
+			<div>
+				<label>search by type</label>
+				<input type="text" name="type">
+				<input type="button" value="Go" onclick="findCarByType()">
+			</div>
+			<div>
+                                <label>search by VIN</label>
+                                <input type="text" name="vin">
+                                <input type="button" value="Go" onclick="findCarByVin()">
+                        </div>
+			<div>
+                                <label>search by accident</label>
+                                <input type="text" name="accident">
+                                <input type="button" value="Go" onclick="findCarByAccident()">
+                        </div>
+			<div>
+                                <label>search by color</label>
+                                <select name="color" id="color">
+					<option value="red">red</option>
+					<option value="green">green</option>
+					<option value="blue">blue</option>
+					<option value="black">bleck</option>
+					<option value="white">white</option>
+				</select>
+                                <input type="button" value="Go" onclick="findCarByColor()">
+                        </div>
 		</form>
 		<hr>
 		<p id="p">list of car is <br></p>	
