--- a/homework/tatev_martirosyan/js/homework_js/task_9.html
+++ b/homework/tatev_martirosyan/js/homework_js/task_9.html
@@ -15,13 +15,34 @@
 				if(a[i]>=a[i+1])
 				[a[i],a[i+1]]=[a[i+1],a[i]];
 			}
-			//console.log(a);
 		}
 		return a;
 	}
-	let arr=[1, 7, 91, 27,5,32, 12, 83, 29];
-	console.log(arr);
-	console.log(bubbleSort(arr));
+	function test (a, exp)
+	{
+		let actual=bubbleSort(a);
+		console.log(actual);
+		if(actual.length===exp.length)
+		{
+			for(let i=0; i < actual.length; i++)
+			{ 
+				if(actual[i]!=exp[i])
+				{
+					console.log("error");
+					return;
+				}
+			}
+		}else
+		{
+			console.log("error");
+			return;
+		}
+	console.log("Ok");
+	}
+	
+	test([],[]);
+	test([15,51,1],[1,15]);
+	test([1, 7, 91, 27,5,32, 12, 83, 29],[1,5,7,12,27,29,32,83,91]);
 	</script>
 	</body>
 	</html>
