--- a/homework/gohar_abrahamyan/JS/shortTasks/index7.html
+++ b/homework/gohar_abrahamyan/JS/shortTasks/index7.html
@@ -8,7 +8,7 @@
 
 
         <script>
-           function sum(array){
+           let sum= (array) => {
                let nums = array.join("")
                .split('')
                let sum = 0
